--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/firstproject	
+spring.datasource.url=jdbc:mysql://localhost:3306/groupprojectschema	
 spring.datasource.username=root
-spring.datasource.password=r0@T9sql
+spring.datasource.password=04171131
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
